also fix rename button alignment

--- a/css/style.css
+++ b/css/style.css
@@ -126,8 +126,8 @@
 	background-color: transparent;
 	border: none;
 	position: absolute;
-	right: -5px;
-	top: 38px;
+	right: -2px;
+	top: 34px;
 	padding: 16px;
 	opacity: .5;
 }
